# search_engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  answers.json  config.json  requests.json
Test documents/: CMakeLists_tests.txt  text4.txt
include/: config.h  config.h.in  converter.h  converterJSON.h  invertedIndex.h  searchServer.h  versionConfig.h  versionConfig.h.in
src/: CMakeLists.txt  converter.cpp  converterJSON.cpp  index.cpp  invertedIndex.cpp  main.cpp  searchServer.cpp  test.cpp
tests/: CMakeLists.txt  test.cpp  text1.txt  text4.txt
